--- a/style.css
+++ b/style.css
@@ -64,3 +64,29 @@ body {
    h2, h3 {
     margin: 0px;
    }
+
+
+   .content h1 {
+    color: rgb(172, 42, 42);
+}
+
+#portfolio {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+#portfolio li {
+    background: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+#portfolio li:hover {
+    background: #eee;
+}
+
+#portfolio a {
+    text-decoration: none;
+    color: #454545;
+}
