--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     color: rgb(172, 42, 42);
     padding: 10px;
     background-size: 100%;
-    font-family:cursive;}
+    font-family:fantasy;}
     #all-contents {
    max-width: 800px;
     margin: auto;
