--- a/asd-projects/pong/index.css
+++ b/asd-projects/pong/index.css
@@ -19,3 +19,63 @@ body {
 /*   left: 100px; */  /* Uncomment if you want to set a "starting" position */
 /*   top: 100px;  */  /* Uncomment if you want to set a "starting" position */
 }
+
+#line {
+  background-color: white;
+  width: 15px;
+  height: 440px;
+  position: absolute; 
+  left: 210px;
+}
+
+#paddle1 {
+  background-color: white;
+  width: 20px;
+  height: 80px;
+  position: absolute; 
+  left: 20px;
+  top: 180px;
+  border-radius: 8px;
+}
+
+#paddle2 {
+  background-color: white;
+  width: 20px;
+  height: 80px;
+  position: absolute; 
+  left: 400px;
+  top: 180px;
+  border-radius: 8px;
+}
+
+#ball {
+  background-color: teal;
+  width: 20px;
+  height: 20px;
+  position: absolute; 
+  left: 40px;
+  top: 180px;
+  border-radius: 10px;
+}
+
+#score1 {
+  color: red;
+  position: absolute;
+  left: 10px;
+  top: 440px;
+  font-size: 30px;
+
+}
+
+#score2 {
+  color: red;
+  position: absolute;
+  left: 270px;
+  top: 440px;
+  font-size: 30px;
+
+}
+
+
+
+
